--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
-body {
+/*body {
 	height:100%;
+}*/
+.navbar-custom {
+	  background-color:#46B235;
+	  background-image: none;
+	  background-repeat: no-repeat;
+	  opacity: 0.8;
+	 
 }
+.navbar-default .navbar-brand {
+	
+	color:black;
+}
+#loginContainer {
+			background-image:url('../images/jogger.jpg');
+    		width:100%;
+			height:900px;
+    		background-size:cover;
+    		background-position:center;
+    	
+}
+#topRow{
+    		margin-top:100px;
+    		text-align:center;
+    	}
