--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 	  background-color:#46B235;
 	  background-image: none;
 	  background-repeat: no-repeat;
-	  opacity: 0.8;
+	  /*opacity: 0.8;*/
 	 
 }
 .navbar-default .navbar-brand {
@@ -24,3 +24,18 @@
     		margin-top:100px;
     		text-align:center;
     	}
+.tiles {
+	
+	background-color:yellow;
+	
+}
+
+.row.no-gutters {
+   margin-right: 0;
+   margin-left: 0;
+}
+.row.no-gutters > [class^="col-"],
+.row.no-gutters > [class*=" col-"] {
+   padding-right: 0;
+   padding-left: 0;
+}
